2003-07-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/gdi-RET.xml: Forced "RET" option of "gdi" driver to be
	  always off, turning it on gives messy printouts and blocks the
	  printer (at least Samsung ML-4500).

	* opt/gdi-PageTimeout.xml, opt/gdi-PowerSaveTime.xml: Made these
	  options enumerated choice options with only a few values, one
	  does not need to set these values with per-second or per-minute
	  accuracy.
	
2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_4050.xml: Cleaned up text, added URL of
	  manufacturer-supplied PPD.

2003-07-18  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/gdi-Altitude.xml, opt/gdi-JamRecovery.xml,
	  opt/gdi-Reprint.xml opt/gdi-AllowReprint.xml: Made option
	  descriptions for the "gdi" driver more clear.

	* driver/gdi.xml: Additional text.

2003-07-17  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/gdi.xml, opt/2.xml, gdi-Altitude.xml, opt/gdi-Copies.xml,
	  opt/gdi-Density.xml, opt/gdi-Economode.xml,
	  opt/gdi-JamRecovery.xml, opt/gdi-Manualfeed.xml,
	  opt/gdi-MediaType.xml, opt/gdi-PageSizeJCL.xml,
	  opt/gdi-PageSizePS.xml, opt/gdi-PageSize.xml,
	  opt/gdi-PageTimeout.xml, opt/gdi-PowerSaveTime.xml,
	  opt/gdi-PowerSaving.xml, opt/gdi-Reprint.xml, opt/gdi-RET.xml:
	  Complete option set for Samsung's "gdi" driver.
	
2003-07-02  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/foo2zjs.xml, printer/Minolta-Color_PageWorks_Pro_L.xml,
	  opt/foo2zjs-ICM.xml, opt/foo2zjs-InputSlot.xml: Added Minolta
	  Color PageWorks Pro L color laser printer (Thanks to Rick
	  Richardson).

2003-06-28  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_4105.xml, printer/HP-OfficeJet_4115.xml:
	  Added the HP OfficeJet 4105/4115 multi-function devices.

	* printer/HP-OfficeJet_4110.xml: Text update.
	
	* printer/Canon-LBP-470.xml: Added the Canon LBP-470.

	* printer/Canon-LIPS-IV.xml, printer/Canon-LIPS-IVv.xml: Text
	  updates (LIPS 4 is a vector PDL).
