@@ -15,12 +15,14 @@
         <en>1 print cartridge (with toner and drum) per color 
         (Cyan, Magenta, Yellow, blacK)</en>
       </comments>
-    <!--one or more "partno" elements.--></consumables>
+    <!--one or more "partno" elements.-->
+    </consumables>
   </mechanism>
   <url>http://h20022.www2.hp.com/busprod/overview/0,12512,series=83875^type=18972^category=64173,00.html?lsidebarLayId=106&amp;rsidebarLayId=63</url>
   <lang>
     <postscript level="3">
-    <!--unknown ppd filename "ppd"--></postscript>
+      <ppd>/download/PPD/HP/hp_color_LaserJet_5500.ppd</ppd>
+    </postscript>
     <pcl level="6"/>
     <pjl/>
     <text>
