@@ -12,11 +12,11 @@
     </resolution>
     <consumables>
       <comments>
-        <en>dual cartridges</en>
+        <en>One black and one CMY color cartridge</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.hp.com/cposupport/prodhome/dj870c.html</url>
+  <url>http://www.hp.com/cposupport/prodhome/dj870cz.html</url>
   <lang>
     <pcl level="3"/><!--no pjl-->
     <text>
