@@ -18,7 +18,7 @@
   <url>http://www.hp.com/cposupport/eschome.html</url>
   <lang>
     <postscript level="2">
-      <ppd>http://www.linuxprinting.org/download/PPD/HP/0.4/English/HP_LaserJet_4050_Series.ppd</ppd>
+      <ppd>/download/PPD/HP/0.4/English/HP_LaserJet_4050_Series.ppd</ppd>
     </postscript>
     <pcl level="6" />
     <pjl/>
