@@ -1,3 +1,13 @@
+2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-DeskJet_870C.xml: Fixed URL for the printer.
+
+	* printer/HP-LaserJet_4050.xml: Fixed URL of manufacturer-supplied
+	  PPD.
+
+	* printer/HP-Color_LaserJet_5500.xml: Added URL of
+	  manufacturer-supplied PPD.
+
 2003-07-20  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* opt/gdi-RET.xml: Forced "RET" option of "gdi" driver to be
